@@ -1,12 +1,25 @@
 # Slime Invaders: 2D Shooter
 - Made with Java and JavaFX
 
-## How to run:
-### Locally:
 
+
+## How to run:
+- **Make sure to have Java SE 21 or lower versions and JavaFX installed**
+
+### Locally:
+- Clone repository or download files
+- Add this line to the VM Args:
+```
+--module-path "<JavaFX/lib path>" --add-modules javafx.controls,javafx.graphics,javafx.fxml
+```
+- add JavaFX to classpath
+- run
 
 ### Through runnable .jar file
-- can be downloaded [here](https://drive.google.com/file/d/1esINmZQYA-6gaVS8rmJvXtYTfJA9o7Ww/view?usp=sharing)
-- make sure to have Java SE 21 or lower versions and JavaFX installed
+- can be downloaded [HERE](https://drive.google.com/file/d/1esINmZQYA-6gaVS8rmJvXtYTfJA9o7Ww/view?usp=sharing)
 - open a terminal then navigate to path where SlimeInvaders.jar file is located
 - enter this line: ** "java --module-path "<JavaFX/lib path>" --add-modules javafx.controls,javafx.graphics,javafx.fxml -jar SlimeInvaders.jar" **
+
+
+### Some Notes:
+- custom fonts doesn't apply on the executable .jar file (haven't fixed this yet)
